# gestion-eventos-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  event-horizon-backend.sln  manage.py  package.json  pyproject.toml  pytest.ini  requirements.txt  typeorm.config.ts
administration/: urls.py  views.py
administration/api/: serializer.py  service.py  views.py
authentication/: models.py  urls.py  views.py
authentication/api/: serializer.py  views.py
authentication/enum/: role.py  roles.py
authentication/migrations/: 0001_initial.py  0002_alter_eventuser_email_alter_eventuser_id.py  0002_alter_user_is_staff.py  0003_eventuser_image.py  0003_user_phone_alter_user_rol.py  0004_alter_user_rol.py
authentication/services/: mails.py
authentication/tests/: tests_authentication.py
categories/: models.py
categories/migrations/: 0001_initial.py
categories/services/: category_service.py  sub_category_service.py
common/abstract/: apiviews.py
common/guards/: factory_guard.py
common/models/: base.py
common/serializers/: base.py
common/services/: base.py  service.py
common/strategy/: authpermission.py
common/tests/: fixture.py  tests_utils.py
common/utils/: cache_utils.py  codegen.py
common/validators/: params_validator.py
core/: files.py
core/guards/: permission_classes.py
event-horizon-backend/: .env.example  Bootstrap.cs  Builder.cs  Dockerfile  Program.cs  Startup.cs  WeatherForecast.cs  appsettings.json  event-horizon-backend.csproj  event-horizon-backend.http
events/: models.py  urls.py  views.py
gestioneventos/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/: main.ts  swagger.ts
(+78 files in other folders)
