[project]
name = "gestion-eventos-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amqp==5.3.1",
    "asgiref==3.8.1",
    "billiard==4.2.1",
    "celery==5.4.0",
    "channels==4.2.0",
    "channels-redis==4.2.1",
    "chardet==5.2.0",
    "click==8.1.7",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "django==5.1.3",
    "django-redis==5.4.0",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "drf-yasg==1.21.8",
    "factory-boy==3.3.1",
    "faker==33.1.0",
    "ffmpeg-python==0.2.0",
    "fonttools==4.55.3",
    "future==1.0.0",
    "inflection==0.5.1",
    "iniconfig==2.0.0",
    "kiwisolver==1.4.7",
    "kombu==5.4.2",
    "matplotlib==3.10.0",
    "msgpack==1.1.0",
    "numpy==2.2.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "pluggy==1.5.0",
    "prompt-toolkit==3.0.48",
    "psycopg2-binary==2.9.10",
    "pyjwt==2.10.0",
    "pyparsing==3.2.0",
    "pytest==8.3.4",
    "pytest-django==4.9.0",
    "pytest-factoryboy==2.7.0",
    "pytest-ordering==0.6",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "reportlab==4.2.5",
    "six==1.17.0",
    "sqlparse==0.5.2",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "uritemplate==4.1.1",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "whitenoise==6.8.2",
]
